--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Base Site</title>
+		<title>Word-Press</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/blog-word-cloud1.jpg"/>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script
+		src="https://code.jquery.com/jquery-3.4.1.js"
+		integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+		crossorigin="anonymous"></script>
+	<script>
+		function SubForm (){
+			$.ajax({
+				url:"https://api.apispreadsheets.com/data/2950/",
+				type:"post",
+				data:$("#myForm").serializeArray(),
+				success: function(){
+					alert("Form Data Submitted :)")
+				},
+				error: function(){
+					alert("There was an error :(")
+				}
+			});
+		}
+	</script>
 	</head>
 	<body class="is-preload">
 
@@ -19,9 +35,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						My Personal Blog</h1>
-						<p>A fully responsive Writing Blog Website.</p>
+						<h1>Word-Press<br /></h1>
+						<p>Join us for an uninterrupted experience of writing your heart out. </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -29,21 +44,21 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Base Site</a>
+						<a href="index.html" class="logo">Write With Us</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is My Personal Blog</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">Blogs</a></li>
+							<li><a href="generic.html">About Us</a></li>
+							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/srishti-b-345374140/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.facebook.com/srishti.binwani.1/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/__srishti10__/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/srishti-10" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -53,100 +68,117 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">Nov 2, 2020</span>
+									<h2><a href="ishita.html">TO ANOTHER WEIRD ENDING?<br />
+									</a></h2>
+									<p>The beginning was rosy, adventurous and full of serotonin secretions. I am glad I had my fair share of adventures thanks to the people close to me. However, I saw the most practical and real world this semester. From goons to dicks, from liars to pricks, I think I got to see them all. </p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="ishita.html" class="image main"><img src="images/ishita.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="ishita.html" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
-							<section class="posts">
+							<section class="posts"> 
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">Nov 27, 2020</span>
+										<h2><a href="sneha.html">We Need Feminism!<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="sneha.html" class="image fit"><img src="images/feminism.jpg" alt="" /></a>
+									<p style="text-align: center;">She asked what time the sun sets, <br>
+										So she could walk home in it's light, <br>
+										Because she'd heard it's far too scary, <br>
+										To be on the streets at night.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="sneha.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">Nov 13, 2020</span>
+										<h2><a href="Sneha-1.html">Dynamics Of Us<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="Sneha-1.html" class="image fit"><img src="images/rel.jpg" alt="" /></a>
+									<p style="text-align: center;">The dynamics of relationships are very complex, <br> 
+										Unsure of the outcome, real or imaginary? </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="Sneha-1.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">Oct 15, 2020</span>
+										<h2><a href="Manas.html">।। आखिरी चेतावनी।।<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="Manas.html" class="image fit"><img src="images/heaven.jpg" alt="" /></a>
+									<p style="text-align: center;">शक्ति का उन्मादी स्वर ले, <br>
+										घूमते मतवाले हाथी, <br>
+										जाते कानन उजाड़ते, <br>
+										रोकते नदियों की धारा। 
+										</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="Manas.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">Oct 11, 2020</span>
+										<h2><a href="riddhima.html">Untimely Rains<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="riddhima.html" class="image fit"><img src="images/rains.jpg" alt="" /></a>
+									<p style="text-align: center;">Will I go on watering this love which never grows into a tree? <br>
+										Questions go unanswered as my words will be washed away before the memories become a sea <br>
+										Can I come closer to you ? <br>
+										Silence drips off like untimely rains</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="riddhima.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<span class="date">Oct 10, 2020</span>
+										<h2><a href="Srishti.html">My Artistic Mind<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="Srishti.html" class="image fit"><img src="images/srishti.jpg" alt="" /></a>
+									<p style="text-align: center;">A single slit <br> 
+										And I watch slowly, the pain leaving my body  <br>
+										Dripping down to the cold floor <br>
+										With half hearted promises of people <br>
+										That don't matter anymore...</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="Srishti.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<span class="date">Sept 27, 2020</span>
+										<h2><a href="Srishti-1.html">Just A Dream?<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="Srishti-1.html" class="image fit"><img src="images/srish.jpg" alt="" /></a>
+									<p style="text-align: center;">I wake up to no one and it's all gone <br>
+										The thought's, the dreams, the doubt's and the sound <br>
+										It's an empty mound of space <br>
+										I don't feel the pain  <br>
+										Is it a dream or have I bled out the hurt again...</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="Srishti-1.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
 
 						<!-- Footer -->
-							<footer>
-								<div class="pagination">
+							<!-- <footer>
+								<div class="pagination"> -->
 									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
+									<!-- <a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
@@ -155,54 +187,57 @@
 									<a href="#" class="page">10</a>
 									<a href="#" class="next">Next</a>
 								</div>
-							</footer>
+							</footer> -->
 
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
+				<footer id="footer">
+					<section>
+						<form method="post" action="#">
+							<div class="fields">
+								<div class="field">
+									<label for="name">Name</label>
+									<input type="text" name="name" id="name" />
 								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
+								<div class="field">
+									<label for="email">Email</label>
+									<input type="text" name="email" id="email" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="3"></textarea>
+								</div>
+							</div>
+							<!-- <ul class="actions">
+								<li><input type="submit" value="Send Message" /></li>
+							</ul> -->
+						</form>
+						<ul class="actions">
+							<li><button onclick='SubForm()'>Submit</button></li>
+						</ul>
+					</section>
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>4-M-15, Jawahar Nagar<br />
+								Jaipur, Rajasthan</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">+91 6377762193</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="mailto:srishtibinwani@gmail.com">srishtibinwani@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<ul class="icons">
+									<li><a href="https://www.linkedin.com/in/srishti-b-345374140/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.facebook.com/srishti.binwani.1/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/__srishti10__/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/srishti-10" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -210,7 +245,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Word-Press</li><li>Design: <a href="mailto:srishtibinwani@gmail.com">srishtibinwani</a></li></ul>
 					</div>
 
 			</div>
