--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/png" href="images/blog-word-cloud1.jpg"/>
+		<link rel="icon" type="image/png" href="images/35-358684_0-replies-0-retweets-0-likes-blog-tld-logo.png"/>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script
 		src="https://code.jquery.com/jquery-3.4.1.js"
