--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Word-Press<br /></h1>
-						<p>Join us for an uninterrupted experience of writing your heart out. </p>
+						<h1 style="color: black;">Word-Press<br /></h1>
+						<p style="color: black;">Join us for an uninterrupted experience of writing your heart out. </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
