--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/png" href="images/Untitled.png"/>
+		<link rel="icon" type="image/png" href="images/klipartz.com.png"/>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script
 		src="https://code.jquery.com/jquery-3.4.1.js"
@@ -35,6 +35,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
+						<p style="text-align: center;"><img style="height: 250px;" src="images/klipartz.com.png"></p>
 						<h1 style="color: black;">Word-Press<br /></h1>
 						<p style="color: black;">Join us for an uninterrupted experience of writing your heart out. </p>
 						<ul class="actions">
