--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<div id="intro">
 						<p style="text-align: center;"><img style="height: 250px;" src="images/klipartz.com.png"></p>
 						<h1 style="color: black;">Word-Press<br /></h1>
-						<p style="color: black;">Join us for an uninterrupted experience of writing your heart out. </p>
+						<p style="color: black;"><b>Join us for an uninterrupted experience of writing your heart out.</b></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
