--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/png" href="images/klipartz.com.png"/>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script
-		src="https://code.jquery.com/jquery-3.4.1.js"
-		integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-		crossorigin="anonymous"></script>
-	<script>
-		function SubForm (){
-			$.ajax({
-				url:"https://api.apispreadsheets.com/data/2950/",
-				type:"post",
-				data:$("#myForm").serializeArray(),
-				success: function(){
-					alert("Form Data Submitted :)")
-				},
-				error: function(){
-					alert("There was an error :(")
-				}
-			});
-		}
+		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous">
+		</script>
+  <script>
+	function SubForm (){
+		$.ajax({
+			url:'https://api.apispreadsheets.com/data/3216/',
+			type:'post',
+			data:$("#myForm").serializeArray(),
+			success: function(){
+			  alert("Form Data Submitted :)")
+			},
+			error: function(){
+			  alert("There was an error :(")
+			}
+		});
+	}
 	</script>
 	</head>
 	<body class="is-preload">
@@ -195,7 +193,7 @@
 				<!-- Footer -->
 				<footer id="footer">
 					<section>
-						<form method="post" action="#">
+						<form id="myForm" method="post" action="#">
 							<div class="fields">
 								<div class="field">
 									<label for="name">Name</label>
@@ -214,9 +212,7 @@
 								<li><input type="submit" value="Send Message" /></li>
 							</ul> -->
 						</form>
-						<ul class="actions">
-							<li><button onclick='SubForm()'>Submit</button></li>
-						</ul>
+						<button onclick="SubForm()">Submit</button>
 					</section>
 						<section class="split contact">
 							<section class="alt">
