--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/png" href="images/bd5f36ca-5d6a-45f2-8100-d92cfc20f032_200x200.png"/>
+		<link rel="icon" type="image/png" href="images/999b035b-c82a-4b38-9603-42956daa8fd2_200x200 (1).png"/>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous">
 		</script>
@@ -33,7 +33,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<p style="text-align: center;"><img width="100%" src="images/bd5f36ca-5d6a-45f2-8100-d92cfc20f032_200x200.png"></p>
+						<p style="text-align: center;"><img width="100%" src="images/999b035b-c82a-4b38-9603-42956daa8fd2_200x200 (1).png"></p>
 						<h1 style="color: black;">Word-Press<br /></h1>
 						<b><p style="color: black;">Join us for an uninterrupted experience of writing your heart out.</p></b>
 						<ul class="actions">
