--- a/generic.html
+++ b/generic.html
@@ -7,8 +7,25 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/png" href="images/klipartz.com.png"/>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>	
+		<link rel="icon" type="image/png" href="images/Untitled-1.png"/>
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous">
+		</script>
+  <script>
+	function SubForm (){
+		$.ajax({
+			url:'https://api.apispreadsheets.com/data/3216/',
+			type:'post',
+			data:$("#myForm").serializeArray(),
+			success: function(){
+			  alert("Form Data Submitted :)")
+			},
+			error: function(){
+			  alert("There was an error :(")
+			}
+		});
+	}
+	</script>	
 	</head>
 	<body class="is-preload">
 
@@ -47,6 +64,7 @@
 									<p>created by: Srishti Binwani</p>
 								</header>
 								<div class="image main"><img src="images/mockups_realistic_03.jpg" alt="" /></div>
+								<p style="text-align: center;"><img width="350px" src="images/Untitled-1.png"></p>
 								<p>This website is cretated to help young and budding writers publish their work and spread it to millions of our readers. The website uses basic CSS, HTML, Bootstrap and Java Script.</p>
 								<p>The website is an innitiative to bring together a community of writers and give them a platform to talk about whatever it is that is on their minds.</p> <br> <br> <br> 
 								<h1 style="text-align: center;">Meet And Greet<br /> </h1>
@@ -70,7 +88,7 @@
 					<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<form id="myForm" method="post" action="#">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -85,10 +103,11 @@
 										<textarea name="message" id="message" rows="3"></textarea>
 									</div>
 								</div>
-								<ul class="actions">
+								<!-- <ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
-								</ul>
+								</ul> -->
 							</form>
+							<button onclick="SubForm()">Submit</button>
 						</section>
 						<section class="split contact">
 							<section class="alt">
